Alp_sidane_Salah_hamza_Bendidi_wissal/javadoc-errors.txt
Loading source files for package fr.zoomanager...
Constructing Javadoc information...
Building index for all the packages and classes...
Standard Doclet version 21.0.2+13-LTS-58
Building tree for all the packages and classes...
src/fr/zoomanager/model/enclos/package-info.java:11: error: unexpected end tag: </p>
 * </ul></p>
        ^
src/fr/zoomanager/model/financial/package-info.java:9: error: unexpected end tag: </p>
 * </ul></p>
        ^
src/fr/zoomanager/model/user/package-info.java:8: error: unexpected end tag: </p>
 * </ul></p>
        ^
src/fr/zoomanager/view/package-info.java:10: error: unexpected end tag: </p>
 * </ul></p>
        ^
Generating doc/fr/zoomanager/model/employee/AgentMenage.html...
Generating doc/fr/zoomanager/model/animal/Animal.html...
Generating doc/fr/zoomanager/model/financial/Budget.html...
Generating doc/fr/zoomanager/view/ConsoleView.html...
Generating doc/fr/zoomanager/model/employee/Employee.html...
Generating doc/fr/zoomanager/model/enclos/Enclos.html...
Generating doc/fr/zoomanager/model/animal/FlamantRose.html...
Generating doc/fr/zoomanager/model/animal/Lion.html...
Generating doc/fr/zoomanager/Main.html...
src/fr/zoomanager/Main.java:15: warning: use of default constructor, which does not provide a comment
public class Main {
       ^
Generating doc/fr/zoomanager/model/animal/Mammifere.html...
Generating doc/fr/zoomanager/model/animal/Oiseau.html...
Generating doc/fr/zoomanager/model/animal/Pelican.html...
Generating doc/fr/zoomanager/model/user/Role.html...
Generating doc/fr/zoomanager/model/employee/Soigneur.html...
Generating doc/fr/zoomanager/model/animal/Species.html...
Generating doc/fr/zoomanager/model/financial/Transaction.html...
Generating doc/fr/zoomanager/model/financial/TransactionType.html...
Generating doc/fr/zoomanager/model/user/User.html...
Generating doc/fr/zoomanager/model/animal/Zebre.html...
Generating doc/fr/zoomanager/model/Zoo.html...
Generating doc/fr/zoomanager/controller/ZooController.html...
Generating doc/fr/zoomanager/package-summary.html...
Generating doc/fr/zoomanager/package-tree.html...
Generating doc/fr/zoomanager/controller/package-summary.html...
Generating doc/fr/zoomanager/controller/package-tree.html...
Generating doc/fr/zoomanager/model/package-summary.html...
Generating doc/fr/zoomanager/model/package-tree.html...
Generating doc/fr/zoomanager/model/animal/package-summary.html...
Generating doc/fr/zoomanager/model/animal/package-tree.html...
Generating doc/fr/zoomanager/model/employee/package-summary.html...
Generating doc/fr/zoomanager/model/employee/package-tree.html...
Generating doc/fr/zoomanager/model/enclos/package-summary.html...
Generating doc/fr/zoomanager/model/enclos/package-tree.html...
Generating doc/fr/zoomanager/model/financial/package-summary.html...
Generating doc/fr/zoomanager/model/financial/package-tree.html...
Generating doc/fr/zoomanager/model/user/package-summary.html...
Generating doc/fr/zoomanager/model/user/package-tree.html...
Generating doc/fr/zoomanager/view/package-summary.html...
Generating doc/fr/zoomanager/view/package-tree.html...
Generating doc/fr/zoomanager/controller/class-use/ZooController.html...
Generating doc/fr/zoomanager/class-use/Main.html...
Generating doc/fr/zoomanager/model/class-use/Zoo.html...
Generating doc/fr/zoomanager/model/financial/class-use/Budget.html...
Generating doc/fr/zoomanager/model/financial/class-use/TransactionType.html...
Generating doc/fr/zoomanager/model/financial/class-use/Transaction.html...
Generating doc/fr/zoomanager/model/enclos/class-use/Enclos.html...
Generating doc/fr/zoomanager/model/user/class-use/User.html...
Generating doc/fr/zoomanager/model/user/class-use/Role.html...
Generating doc/fr/zoomanager/model/animal/class-use/Pelican.html...
Generating doc/fr/zoomanager/model/animal/class-use/Zebre.html...
Generating doc/fr/zoomanager/model/animal/class-use/Mammifere.html...
Generating doc/fr/zoomanager/model/animal/class-use/FlamantRose.html...
Generating doc/fr/zoomanager/model/animal/class-use/Oiseau.html...
Generating doc/fr/zoomanager/model/animal/class-use/Lion.html...
Generating doc/fr/zoomanager/model/animal/class-use/Animal.html...
Generating doc/fr/zoomanager/model/animal/class-use/Species.html...
Generating doc/fr/zoomanager/model/employee/class-use/AgentMenage.html...
Generating doc/fr/zoomanager/model/employee/class-use/Employee.html...
Generating doc/fr/zoomanager/model/employee/class-use/Soigneur.html...
Generating doc/fr/zoomanager/view/class-use/ConsoleView.html...
Generating doc/fr/zoomanager/package-use.html...
Generating doc/fr/zoomanager/controller/package-use.html...
Generating doc/fr/zoomanager/model/package-use.html...
Generating doc/fr/zoomanager/model/animal/package-use.html...
Generating doc/fr/zoomanager/model/employee/package-use.html...
Generating doc/fr/zoomanager/model/enclos/package-use.html...
Generating doc/fr/zoomanager/model/financial/package-use.html...
Generating doc/fr/zoomanager/model/user/package-use.html...
Generating doc/fr/zoomanager/view/package-use.html...
Generating doc/overview-tree.html...
Generating doc/index.html...
Building index for all classes...
Generating doc/allclasses-index.html...
Generating doc/allpackages-index.html...
Generating doc/index-all.html...
Generating doc/search.html...
Generating doc/overview-summary.html...
Generating doc/help-doc.html...
4 errors
1 warning
